FEAR.Lang/Lang/RFEARParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:/Source/Repos/Research/FEAR/FEAR.Lang/RFEARParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace FEAR {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class RFEARParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Swrlb=1, Segment=2, Define=3, Ruleset=4, Derived=5, Observed=6, Ontology=7, 
		Include=8, Prefix_=9, Depends_on=10, With=11, OpenParen=12, CloseParen=13, 
		OpenBrace=14, CloseBrace=15, SemiColon=16, Comma=17, Colon=18, Conjunct=19, 
		Indirection=20, LeftAngle=21, RightAngle=22, Whitespace=23, MultiLineComment=24, 
		SingleLineComment=25, Newline=26, IRI=27, VAR=28, STRING_LITERAL=29, NUMBER_LITERAL=30, 
		IDENTIFIER=31;
	public const int
		RULE_program = 0, RULE_entityUri = 1, RULE_ruleBlock = 2, RULE_swrlRule = 3, 
		RULE_swrlAntecedent = 4, RULE_swrlConsequent = 5, RULE_atom = 6, RULE_classAtom = 7, 
		RULE_propertyAtom = 8, RULE_builtinAtom = 9, RULE_argument = 10, RULE_variable = 11, 
		RULE_literal = 12, RULE_iri = 13, RULE_swrlbIri = 14, RULE_swrlbOrIdentifier = 15, 
		RULE_dependsOnClauseBlock = 16, RULE_dependsOnClause = 17, RULE_includeStatement = 18, 
		RULE_prefixStatement = 19, RULE_rulesetDefinitionBlock = 20, RULE_rulesetDefinitionStatement = 21, 
		RULE_ontologyStatement = 22, RULE_ontologyPrefixStatement = 23;
	public static readonly string[] ruleNames = {
		"program", "entityUri", "ruleBlock", "swrlRule", "swrlAntecedent", "swrlConsequent", 
		"atom", "classAtom", "propertyAtom", "builtinAtom", "argument", "variable", 
		"literal", "iri", "swrlbIri", "swrlbOrIdentifier", "dependsOnClauseBlock", 
		"dependsOnClause", "includeStatement", "prefixStatement", "rulesetDefinitionBlock", 
		"rulesetDefinitionStatement", "ontologyStatement", "ontologyPrefixStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'swrlb'", "'segment'", "'define'", "'ruleset'", "'derived'", "'observed'", 
		"'ontology'", "'include'", "'prefix'", "'depends on'", "'with'", "'('", 
		"')'", "'{'", "'}'", "';'", "','", "':'", "'^'", "'->'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Swrlb", "Segment", "Define", "Ruleset", "Derived", "Observed", 
		"Ontology", "Include", "Prefix_", "Depends_on", "With", "OpenParen", "CloseParen", 
		"OpenBrace", "CloseBrace", "SemiColon", "Comma", "Colon", "Conjunct", 
		"Indirection", "LeftAngle", "RightAngle", "Whitespace", "MultiLineComment", 
		"SingleLineComment", "Newline", "IRI", "VAR", "STRING_LITERAL", "NUMBER_LITERAL", 
		"IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RFEARParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static RFEARParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RFEARParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RFEARParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RulesetDefinitionBlockContext rulesetDefinitionBlock() {
			return GetRuleContext<RulesetDefinitionBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(RFEARParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RuleBlockContext[] ruleBlock() {
			return GetRuleContexts<RuleBlockContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RuleBlockContext ruleBlock(int i) {
			return GetRuleContext<RuleBlockContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			rulesetDefinitionBlock();
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Derived || _la==Observed) {
				{
				{
				State = 49;
				ruleBlock();
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 55;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityUriContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(RFEARParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(RFEARParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(RFEARParser.Colon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IRI() { return GetToken(RFEARParser.IRI, 0); }
		public EntityUriContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entityUri; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntityUri(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityUriContext entityUri() {
		EntityUriContext _localctx = new EntityUriContext(Context, State);
		EnterRule(_localctx, 2, RULE_entityUri);
		try {
			State = 61;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				Match(IDENTIFIER);
				State = 58;
				Match(Colon);
				State = 59;
				Match(IDENTIFIER);
				}
				break;
			case IRI:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60;
				Match(IRI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RuleBlockContext : ParserRuleContext {
		public IToken ruleType;
		public IToken ruleName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenBrace() { return GetToken(RFEARParser.OpenBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SwrlRuleContext swrlRule() {
			return GetRuleContext<SwrlRuleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseBrace() { return GetToken(RFEARParser.CloseBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(RFEARParser.SemiColon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(RFEARParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Observed() { return GetToken(RFEARParser.Observed, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Derived() { return GetToken(RFEARParser.Derived, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode With() { return GetToken(RFEARParser.With, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DependsOnClauseBlockContext dependsOnClauseBlock() {
			return GetRuleContext<DependsOnClauseBlockContext>(0);
		}
		public RuleBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ruleBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRuleBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RuleBlockContext ruleBlock() {
		RuleBlockContext _localctx = new RuleBlockContext(Context, State);
		EnterRule(_localctx, 4, RULE_ruleBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			_localctx.ruleType = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==Derived || _la==Observed) ) {
				_localctx.ruleType = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 64;
			_localctx.ruleName = Match(IDENTIFIER);
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==With) {
				{
				State = 65;
				Match(With);
				}
			}

			State = 68;
			Match(OpenBrace);
			State = 69;
			swrlRule();
			State = 70;
			Match(CloseBrace);
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Depends_on) {
				{
				State = 71;
				dependsOnClauseBlock();
				}
			}

			State = 74;
			Match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwrlRuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SwrlAntecedentContext swrlAntecedent() {
			return GetRuleContext<SwrlAntecedentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Indirection() { return GetToken(RFEARParser.Indirection, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SwrlConsequentContext swrlConsequent() {
			return GetRuleContext<SwrlConsequentContext>(0);
		}
		public SwrlRuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_swrlRule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwrlRule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SwrlRuleContext swrlRule() {
		SwrlRuleContext _localctx = new SwrlRuleContext(Context, State);
		EnterRule(_localctx, 6, RULE_swrlRule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			swrlAntecedent();
			State = 77;
			Match(Indirection);
			State = 78;
			swrlConsequent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwrlAntecedentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext[] atom() {
			return GetRuleContexts<AtomContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext atom(int i) {
			return GetRuleContext<AtomContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Conjunct() { return GetTokens(RFEARParser.Conjunct); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Conjunct(int i) {
			return GetToken(RFEARParser.Conjunct, i);
		}
		public SwrlAntecedentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_swrlAntecedent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwrlAntecedent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SwrlAntecedentContext swrlAntecedent() {
		SwrlAntecedentContext _localctx = new SwrlAntecedentContext(Context, State);
		EnterRule(_localctx, 8, RULE_swrlAntecedent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			atom();
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Conjunct) {
				{
				{
				State = 81;
				Match(Conjunct);
				State = 82;
				atom();
				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SwrlConsequentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext[] atom() {
			return GetRuleContexts<AtomContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AtomContext atom(int i) {
			return GetRuleContext<AtomContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Conjunct() { return GetTokens(RFEARParser.Conjunct); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Conjunct(int i) {
			return GetToken(RFEARParser.Conjunct, i);
		}
		public SwrlConsequentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_swrlConsequent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwrlConsequent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SwrlConsequentContext swrlConsequent() {
		SwrlConsequentContext _localctx = new SwrlConsequentContext(Context, State);
		EnterRule(_localctx, 10, RULE_swrlConsequent);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			atom();
			State = 93;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Conjunct) {
				{
				{
				State = 89;
				Match(Conjunct);
				State = 90;
				atom();
				}
				}
				State = 95;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AtomContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ClassAtomContext classAtom() {
			return GetRuleContext<ClassAtomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PropertyAtomContext propertyAtom() {
			return GetRuleContext<PropertyAtomContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BuiltinAtomContext builtinAtom() {
			return GetRuleContext<BuiltinAtomContext>(0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AtomContext atom() {
		AtomContext _localctx = new AtomContext(Context, State);
		EnterRule(_localctx, 12, RULE_atom);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				classAtom();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 97;
				propertyAtom();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 98;
				builtinAtom();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassAtomContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IriContext iri() {
			return GetRuleContext<IriContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenParen() { return GetToken(RFEARParser.OpenParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseParen() { return GetToken(RFEARParser.CloseParen, 0); }
		public ClassAtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classAtom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassAtomContext classAtom() {
		ClassAtomContext _localctx = new ClassAtomContext(Context, State);
		EnterRule(_localctx, 14, RULE_classAtom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			iri();
			State = 102;
			Match(OpenParen);
			State = 103;
			variable();
			State = 104;
			Match(CloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertyAtomContext : ParserRuleContext {
		public VariableContext subjectVariable;
		public ArgumentContext objectVariable;
		[System.Diagnostics.DebuggerNonUserCode] public IriContext iri() {
			return GetRuleContext<IriContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenParen() { return GetToken(RFEARParser.OpenParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma() { return GetToken(RFEARParser.Comma, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseParen() { return GetToken(RFEARParser.CloseParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext argument() {
			return GetRuleContext<ArgumentContext>(0);
		}
		public PropertyAtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertyAtom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertyAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertyAtomContext propertyAtom() {
		PropertyAtomContext _localctx = new PropertyAtomContext(Context, State);
		EnterRule(_localctx, 16, RULE_propertyAtom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			iri();
			State = 107;
			Match(OpenParen);
			State = 108;
			_localctx.subjectVariable = variable();
			State = 109;
			Match(Comma);
			State = 110;
			_localctx.objectVariable = argument();
			State = 111;
			Match(CloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BuiltinAtomContext : ParserRuleContext {
		public ArgumentContext arg1;
		public ArgumentContext arg2;
		[System.Diagnostics.DebuggerNonUserCode] public SwrlbIriContext swrlbIri() {
			return GetRuleContext<SwrlbIriContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OpenParen() { return GetToken(RFEARParser.OpenParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma() { return GetToken(RFEARParser.Comma, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CloseParen() { return GetToken(RFEARParser.CloseParen, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext[] argument() {
			return GetRuleContexts<ArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgumentContext argument(int i) {
			return GetRuleContext<ArgumentContext>(i);
		}
		public BuiltinAtomContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_builtinAtom; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBuiltinAtom(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BuiltinAtomContext builtinAtom() {
		BuiltinAtomContext _localctx = new BuiltinAtomContext(Context, State);
		EnterRule(_localctx, 18, RULE_builtinAtom);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			swrlbIri();
			State = 114;
			Match(OpenParen);
			State = 115;
			_localctx.arg1 = argument();
			State = 116;
			Match(Comma);
			State = 117;
			_localctx.arg2 = argument();
			State = 118;
			Match(CloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IriContext iri() {
			return GetRuleContext<IriContext>(0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_argument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArgument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArgumentContext argument() {
		ArgumentContext _localctx = new ArgumentContext(Context, State);
		EnterRule(_localctx, 20, RULE_argument);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case VAR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 120;
				variable();
				}
				break;
			case STRING_LITERAL:
			case NUMBER_LITERAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 121;
				literal();
				}
				break;
			case IRI:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 3);
				{
				State = 122;
				iri();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VAR() { return GetToken(RFEARParser.VAR, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(Context, State);
		EnterRule(_localctx, 22, RULE_variable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125;
			Match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(RFEARParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER_LITERAL() { return GetToken(RFEARParser.NUMBER_LITERAL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRFEARParserVisitor<TResult> typedVisitor = visitor as IRFEARParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}
